# raf

./: CHANGELOG.md  Cargo.toml  README.md  patterns.json
.github/workflows/: check.yml  ci.yml
src/: args.rs  main.rs  pdf.rs  redact.rs  utils.rs
tests/test_files/: docx_1.docx  file2.txt
tests/test_files/redacted/: docx_1-unredact.json  docx_1.docx  file1-unredact.json  file1.txt  file2-unredact.json  file2.txt
tests/test_files/test_files_recursive/: docx_1_recursive.docx  file1_recursive.txt  file2_recursive.txt  noextension_recursive
tests/test_files/test_files_recursive/redacted/: docx_1-unredact.json  docx_1.docx  docx_1_recursive-unredact.json  docx_1_recursive.docx  file1-unredact.json  file1.txt  file1_recursive-unredact.json  file1_recursive.txt  file2_recursive-unredact.json  file2_recursive.txt
