[package]
name = "raf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.8", features = ["derive"] }
docx-rs = "0.4.6"
lazy_static = "1.4.0"
lopdf = { version = "0.29.0", features = ["nom_parser", "nom"] }
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
text-colorizer = "1.0.0"
